[package]
name = "windot"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.16.0"
gio = "0.16.0"
gdk = "0.16.0"
gtk-layer-shell = "0.5.1"
cairo-rs = "0.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
conv = "0.3.3"
